--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   sqflite: ^1.3.2+1
   datetime_picker_formfield: ^1.0.0
   flutter_time_picker_spinner: ^1.0.6+1
+  toggle_switch: ^0.1.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
