--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_native_timezone: ^1.0.4
   sqflite: ^1.3.2+1
   flutter_time_picker_spinner: ^1.0.6+1
+  flutter_datetime_picker: ^1.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
